# jesus-i-smart-jetson-modeules

./: README.md
m_car_new/src/: race_car_control_node.cpp
sc_mini/launch/: sc_mini_test.launch  start.launch
waypoint_car_control/src/: waypoint_race_car_control_node.cpp
waypoints_move/src/: race_waypoints_navigation_node.cpp
xbox_joy_cmd_vel/: CMakeLists.txt  package.xml
xbox_joy_cmd_vel/launch/: x360.launch
xbox_joy_cmd_vel/src/: xbox360_cmd_vel.cpp
